--- a/isis/src/lro/apps/lrowac2pds/tsts/wac-mono/Makefile
+++ b/isis/src/lro/apps/lrowac2pds/tsts/wac-mono/Makefile
@@ -3,7 +3,8 @@ APPNAME = lrowac2pds
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(APPNAME) from=$(INPUT)/wac-mono.lis \
+	$(LS) $(INPUT)/wac0003330c* > $(OUTPUT)/wac-mono.lis;
+	$(APPNAME) from=$(OUTPUT)/wac-mono.lis \
 	  to=$(OUTPUT)/wac0003330c.img > /dev/null;
 	catlab from=$(OUTPUT)/wac0003330c.img \
 	  to=$(OUTPUT)/wac0003330c_full.pvl > /dev/null;
@@ -13,4 +14,4 @@ commands:
 	  to=$(OUTPUT)/wac0003330c.cub > /dev/null;
 	$(RM) $(OUTPUT)/wac0003330c.img;
 	$(RM) $(OUTPUT)/wac0003330c_full.pvl;
-	
+	$(RM) $(OUTPUT)/wac-mono.lis;
