Standardized printouts for thirdParty and fixed double cleaning
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@196 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/Makefile
+++ b/isis/Makefile
@@ -132,7 +132,6 @@ docs:
 #----------------------------------------------------------------------------
 clean: cleansrc
 	echo "Cleaning Isis"
-	cd src; $(MAKE) clean
 	rm -rf inc
 	rm -rf doc
 	rm -rf bin
@@ -181,8 +180,9 @@ HOST_ARCH ?= $(shell uname -s)
 HOST_MACH  = $(shell uname -m)
 
 thirdParty:
-	echo "Installing 3rdParty Libraries"
+	echo "Installing 3rdParty libraries"
 	rm -f $(ISISROOT)/3rdParty/lib/lib*
-	echo $(HOST_ARCH)
 	$(MAKE) -C $(ISISROOT)/3rdParty install
+	echo "Finished installing 3rdParty libraries"
+	echo " "
 
