Added break between building objects and adding api objects
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@210 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/Makefile
+++ b/isis/Makefile
@@ -68,8 +68,11 @@ api:
 	echo "Building Isis API" 
 	mkdir -p lib
 	cd src; $(MAKE) objects
+	echo "Finished building Isis API"
+	echo ""
+	echo "Adding API objects
 	cd src; $(MAKE) api
-	echo "Finished building Isis API" 
+	echo "Finished adding API objects" 
 	echo " "
 
 #	echo "Building Isis API with debugging" 
