autoregtemplate.xml: Changed VALIDPERCENT to SSUBCHIPVALIDPERCENT parameters in SearchChip group.  Added PVALIDPERCENT to PatternChip group.  Updated examples and unit tests.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@235 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/autoregtemplate/tsts/errors/Makefile
+++ b/isis/src/base/apps/autoregtemplate/tsts/errors/Makefile
@@ -69,7 +69,15 @@ commands:
 	  pline=15 \
 	  ssamp=31 \
 	  sline=31 \
-	  validpercent=0 2>> $(OUTPUT)/error.txt > /dev/null;
+	  pvalidpercent=0 2>> $(OUTPUT)/error.txt > /dev/null;
+	$(APPNAME) to=$(OUTPUT)/autoregtemplateTruth.txt \
+	  algorithm=MaximumCorrelation \
+	  tolerance=0.7  \
+	  psamp=15 \
+	  pline=15 \
+	  ssamp=31 \
+	  sline=31 \
+	  ssubchipvalidpercent=0 2>> $(OUTPUT)/error.txt > /dev/null;
 	$(APPNAME) to=$(OUTPUT)/autoregtemplateTruth.txt \
 	  algorithm=MaximumCorrelation \
 	  tolerance=0.7  \
