--- a/isis/src/base/apps/autoregtemplate/tsts/minDiff/Makefile
+++ b/isis/src/base/apps/autoregtemplate/tsts/minDiff/Makefile
@@ -12,12 +12,13 @@ commands:
 	  pline=15 \
 	  pmin=1200 \
 	  pmax=2800 \
-	  validpercent=75 \
+	  minimumzscore = 0.5 \
+	  pvalidpercent=75 \
 	  ssamp=31 \
 	  sline=31 \
 	  smin=1200 \
 	  smax=2800 \
-	  minimumzscore = 0.5 \
+	  ssubchipvalidpercent=75 \
 	  distancetolerance=2.5 \
 	  windowsize=11 \
 	  eccentricitytesting=true \
