Changed Makefiles to have generated cubelist go to output instead of input
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@295 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/cnettable/tsts/allowErrors/Makefile
+++ b/isis/src/base/apps/cnettable/tsts/allowErrors/Makefile
@@ -3,13 +3,13 @@ APPNAME = cnettable
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	find $(INPUT)/*.cub > $(INPUT)/cubeList.lst; \
-	$(APPNAME) fromlist=$(INPUT)/cubeList.lst \
+	find $(INPUT)/*.cub > $(OUTPUT)/cubeList.lst; \
+	$(APPNAME) fromlist=$(OUTPUT)/cubeList.lst \
 	cnet=$(INPUT)/testNet.net \
 	to=$(OUTPUT)/cnetstats.txt \
 	allowErrors = true \
 	> /dev/null;
-	rm -f $(INPUT)/cubeList.lst > /dev/null;
+	rm -f $(OUTPUT)/cubeList.lst > /dev/null;
 	cat $(OUTPUT)/cnetstats.txt | sed s/,\[^,]\*\.cub,/,.cub,/ \
 	> $(OUTPUT)/output.txt
 	rm -f $(OUTPUT)/cnetstats.txt > /dev/null;
