--- a/isis/src/base/apps/cnettable/tsts/append/Makefile
+++ b/isis/src/base/apps/cnettable/tsts/append/Makefile
@@ -4,12 +4,12 @@ include $(ISISROOT)/make/isismake.tsts
 
 commands:
 	cp $(INPUT)/appendTo.txt $(OUTPUT); \
-	find $(INPUT)/*.cub > $(INPUT)/cubeList.lst; \
-	$(APPNAME) fromlist=$(INPUT)/cubeList.lst \
+	find $(INPUT)/*.cub > $(OUTPUT)/cubeList.lst; \
+	$(APPNAME) fromlist=$(OUTPUT)/cubeList.lst \
 	cnet=$(INPUT)/testNet.net \
 	to=$(OUTPUT)/appendTo.txt \
         append=true > /dev/null; 
-	rm -f $(INPUT)/cubeList.lst > /dev/null;
+	rm -f $(OUTPUT)/cubeList.lst > /dev/null;
 	cat $(OUTPUT)/appendTo.txt | sed s/,\[^,]\*\.cub,/,.cub,/ \
 	> $(OUTPUT)/output.txt
 	rm -f $(OUTPUT)/appendTo.txt
