Cleanup static libraries correctly
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@540 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/3rdParty/Makefile
+++ b/isis/3rdParty/Makefile
@@ -70,6 +70,7 @@ plugins:
 
 clean:
 	rm -f lib/lib*.so*
+	rm -f lib/lib*.a*
 	@for plugs in plugins/*; do \
 	  if [ -d $$plugs -a $$plugs != "plugins/CVS" ]; \
 	  then \
