Enabled cross-package builds with a make flag at the loss of valid log output
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@541 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/Makefile
+++ b/isis/src/Makefile
@@ -2,7 +2,10 @@ include $(ISISROOT)/make/isismake.macros
 
 # Although we're capable of parallel builds at this level, let's not for the
 # sake of the logs - keep apps & objects under the correct package.
+ifeq ($(findstring MULTIPACKAGE, $(MODE)),MULTIPACKAGE)
+else
 .NOTPARALLEL:
+endif
 
 PACKAGES = $(filter-out Makefile docsys CVS IsisObjectConvert.xsl, $(wildcard *))
 
