Parallel documentation builds not supported. Also changed make recursive calls to use $(MAKE)
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@562 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/docsys/Application/Makefile
+++ b/isis/src/docsys/Application/Makefile
@@ -1,5 +1,7 @@
 include $(ISISROOT)/make/isismake.macros
 
+.NOTPARALLEL:
+
 # ISIS DOCS MAKEFILE
 #   Create tables of contents for the Application
 #   documentation and kicks off lower makefiles
@@ -35,7 +37,7 @@ docs: documentation toccat tocoldvnew tocalph categories
 documentation:
 	echo "      Creating Documentation"
 	mkdir -p $(ISISROOT)/doc/Application
-	cd data ; make docs ; cd .. ;
+	cd data ; $(MAKE) docs ; cd .. ;
 
 
 #---------------
