--- a/isis/src/docsys/Application/data/Makefile
+++ b/isis/src/docsys/Application/data/Makefile
@@ -1,5 +1,7 @@
 include $(ISISROOT)/make/isismake.macros
 
+.NOTPARALLEL:
+
 # ISIS APPLICATION DOCS MAKEFILE
 #   Process the XML files deposited by application
 #   makefiles
@@ -36,7 +38,7 @@ printer:
 	echo "        Printer Friendly Version"
 
 	for dirname in $(APPLICATIONS); do \
-	  cd $$dirname ; make -f ../Makefile-application printer ; cd .. ; \
+	  cd $$dirname ; $(MAKE) -f ../Makefile-application printer ; cd .. ; \
 	done
 	mkdir -p $(PFDIR)/styles ; \
 	rsync -lHptr --delete --rsh=ssh $(PFSTYLEDIR)/*.css $(PFDIR)/styles/ ; \
@@ -49,7 +51,7 @@ tabbed:
 	echo "        Tabbed Interface Version"
 
 	for dirname in $(APPLICATIONS); do \
- 	    cd $$dirname ; make -f ../Makefile-application tabbed ; cd .. ; \
+ 	    cd $$dirname ; $(MAKE) -f ../Makefile-application tabbed ; cd .. ; \
 	done
 	mkdir -p $(TABDIR)/styles ; \
 	rsync -lHptr --delete --rsh=ssh $(TABSTYLEDIR)/*.css $(TABDIR)/styles/ ; \
