--- a/isis/src/docsys/Application/data/Makefile-application
+++ b/isis/src/docsys/Application/data/Makefile-application
@@ -1,5 +1,7 @@
 include $(ISISROOT)/make/isismake.macros
 
+.NOTPARALLEL:
+
 # ISIS APPLICATION DOC MAKEFILE
 #   Process the XML files deposited by application
 #   makefiles
