Changed errors test to use appropriate test preferences
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@610 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/autoregtemplate/tsts/errors/Makefile
+++ b/isis/src/base/apps/autoregtemplate/tsts/errors/Makefile
@@ -5,14 +5,16 @@ APPNAME = autoregtemplate
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(APPNAME) to=$(OUTPUT)/autoregtemplateTruth.txt \
+	$(APPNAME) -preference=$(ISISROOT)/src/base/objs/Preference/TestPreferences \
+	  to=$(OUTPUT)/autoregtemplateTruth.txt \
 	  algorithm=MaxCor \
 	  tolerance=0.7  \
 	  psamp=15 \
 	  pline=15 \
 	  ssamp=31 \
 	  sline=31 2> $(OUTPUT)/error.txt > /dev/null;
-	$(APPNAME) to=$(OUTPUT)/autoregtemplateTruth.txt \
+	$(APPNAME) -preference=$(ISISROOT)/src/base/objs/Preference/TestPreferences \
+	  to=$(OUTPUT)/autoregtemplateTruth.txt \
 	  algorithm=MaximumCorrelation \
 	  tolerance=0.7  \
 	  reduction=0 \
@@ -20,7 +22,8 @@ commands:
 	  pline=15 \
 	  ssamp=31 \
 	  sline=31 2>> $(OUTPUT)/error.txt > /dev/null;
-	$(APPNAME) to=$(OUTPUT)/autoregtemplateTruth.txt \
+	$(APPNAME) -preference=$(ISISROOT)/src/base/objs/Preference/TestPreferences \
+	  to=$(OUTPUT)/autoregtemplateTruth.txt \
 	  algorithm=MaximumCorrelation \
 	  tolerance=0.7  \
 	  interpolatortype=C \
@@ -28,7 +31,8 @@ commands:
 	  pline=15 \
 	  ssamp=31 \
 	  sline=31 2>> $(OUTPUT)/error.txt > /dev/null;
-	$(APPNAME) to=$(OUTPUT)/autoregtemplateTruth.txt \
+	$(APPNAME) -preference=$(ISISROOT)/src/base/objs/Preference/TestPreferences \
+	  to=$(OUTPUT)/autoregtemplateTruth.txt \
 	  algorithm=MaximumCorrelation \
 	  tolerance=0.7  \
 	  chipinterpolator=true \
@@ -37,7 +41,8 @@ commands:
 	  pline=15 \
 	  ssamp=31 \
 	  sline=31 2>> $(OUTPUT)/error.txt > /dev/null;
-	$(APPNAME) to=$(OUTPUT)/autoregtemplateTruth.txt \
+	$(APPNAME) -preference=$(ISISROOT)/src/base/objs/Preference/TestPreferences \
+	  to=$(OUTPUT)/autoregtemplateTruth.txt \
 	  algorithm=MaximumCorrelation \
 	  tolerance=0.7  \
 	  chipinterpolator=true \
@@ -45,7 +50,8 @@ commands:
 	  pline=15 \
 	  ssamp=3 \
 	  sline=3 2>> $(OUTPUT)/error.txt > /dev/null;
-	$(APPNAME) to=$(OUTPUT)/autoregtemplateTruth.txt \
+	$(APPNAME) -preference=$(ISISROOT)/src/base/objs/Preference/TestPreferences \
+	  to=$(OUTPUT)/autoregtemplateTruth.txt \
 	  algorithm=MaximumCorrelation \
 	  tolerance=0.7  \
 	  chipinterpolator=true  \
@@ -54,7 +60,8 @@ commands:
 	  pline=15 \
 	  ssamp=17 \
 	  sline=16 2>> $(OUTPUT)/error.txt > /dev/null;
-	$(APPNAME) to=$(OUTPUT)/autoregtemplateTruth.txt \
+	$(APPNAME) -preference=$(ISISROOT)/src/base/objs/Preference/TestPreferences \
+	  to=$(OUTPUT)/autoregtemplateTruth.txt \
 	  algorithm=MaximumCorrelation \
 	  tolerance=0.7  \
 	  psamp=15 \
@@ -62,7 +69,8 @@ commands:
 	  ssamp=31 \
 	  sline=31 \
 	  minimumz=0 2>> $(OUTPUT)/error.txt > /dev/null;
-	$(APPNAME) to=$(OUTPUT)/autoregtemplateTruth.txt \
+	$(APPNAME) -preference=$(ISISROOT)/src/base/objs/Preference/TestPreferences \
+	  to=$(OUTPUT)/autoregtemplateTruth.txt \
 	  algorithm=MaximumCorrelation \
 	  tolerance=0.7  \
 	  psamp=15 \
@@ -70,7 +78,8 @@ commands:
 	  ssamp=31 \
 	  sline=31 \
 	  pvalidpercent=0 2>> $(OUTPUT)/error.txt > /dev/null;
-	$(APPNAME) to=$(OUTPUT)/autoregtemplateTruth.txt \
+	$(APPNAME) -preference=$(ISISROOT)/src/base/objs/Preference/TestPreferences \
+	  to=$(OUTPUT)/autoregtemplateTruth.txt \
 	  algorithm=MaximumCorrelation \
 	  tolerance=0.7  \
 	  psamp=15 \
@@ -78,7 +87,8 @@ commands:
 	  ssamp=31 \
 	  sline=31 \
 	  ssubchipvalidpercent=0 2>> $(OUTPUT)/error.txt > /dev/null;
-	$(APPNAME) to=$(OUTPUT)/autoregtemplateTruth.txt \
+	$(APPNAME) -preference=$(ISISROOT)/src/base/objs/Preference/TestPreferences \
+	  to=$(OUTPUT)/autoregtemplateTruth.txt \
 	  algorithm=MaximumCorrelation \
 	  tolerance=0.7  \
 	  psamp=15 \
@@ -87,7 +97,8 @@ commands:
 	  sline=31 \
 	  subpixel=true \
 	  dist=0 2>> $(OUTPUT)/error.txt > /dev/null;
-	$(APPNAME) to=$(OUTPUT)/autoregtemplateTruth.txt \
+	$(APPNAME) -preference=$(ISISROOT)/src/base/objs/Preference/TestPreferences \
+	  to=$(OUTPUT)/autoregtemplateTruth.txt \
 	  algorithm=MaximumCorrelation \
 	  tolerance=0.7  \
 	  psamp=15 \
@@ -96,7 +107,8 @@ commands:
 	  sline=31 \
 	  subpixel=true \
 	  window=2 2>> $(OUTPUT)/error.txt > /dev/null;
-	$(APPNAME) to=$(OUTPUT)/autoregtemplateTruth.txt \
+	$(APPNAME) -preference=$(ISISROOT)/src/base/objs/Preference/TestPreferences \
+	  to=$(OUTPUT)/autoregtemplateTruth.txt \
 	  algorithm=MaximumCorrelation \
 	  tolerance=0.7  \
 	  psamp=15 \
@@ -105,7 +117,8 @@ commands:
 	  sline=31 \
 	  subpixel=true \
 	  window=4 2>> $(OUTPUT)/error.txt > /dev/null;
-	$(APPNAME) to=$(OUTPUT)/autoregtemplateTruth.txt \
+	$(APPNAME) -preference=$(ISISROOT)/src/base/objs/Preference/TestPreferences \
+	  to=$(OUTPUT)/autoregtemplateTruth.txt \
 	  algorithm=MaximumCorrelation \
 	  tolerance=0.7  \
 	  psamp=15 \
@@ -115,7 +128,8 @@ commands:
 	  subpixel=true \
 	  eccentricitytest=true \
 	  eccentricityratio=0 2>> $(OUTPUT)/error.txt > /dev/null;
-	$(APPNAME) to=$(OUTPUT)/autoregtemplateTruth.txt \
+	$(APPNAME) -preference=$(ISISROOT)/src/base/objs/Preference/TestPreferences \
+	  to=$(OUTPUT)/autoregtemplateTruth.txt \
 	  algorithm=MaximumCorrelation \
 	  tolerance=0.7  \
 	  psamp=15 \
