Update Makefile to remove the path
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@698 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/cnetstats/tsts/cubeFilter/Makefile
+++ b/isis/src/base/apps/cnetstats/tsts/cubeFilter/Makefile
@@ -5,9 +5,9 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(LS) -1 $(INPUT)/*.cub > $(OUTPUT)/cube.lis;
 	$(APPNAME) fromlist=$(OUTPUT)/cube.lis \
-	  cnet=$(INPUT)/cnet.net \
-	  filter=yes \
-	  deffile=$(INPUT)/deffile.def \
-	  flatfile=$(OUTPUT)/truth.txt \
-	  type=csv > /dev/null;
-	  $(RM) $(OUTPUT)/cube.lis;
+	cnet=$(INPUT)/cnet.net \
+	filter=yes \
+	deffile=$(INPUT)/deffile.def \
+	flatfile=$(OUTPUT)/out.txt > /dev/null;
+	$(SED) 's/.*\/input\///' $(OUTPUT)/out.txt > $(OUTPUT)/truth.txt;
+	$(RM) $(OUTPUT)/cube.lis $(OUTPUT)/out.txt;
