--- a/isis/src/base/apps/cnetstats/tsts/imagestats/Makefile
+++ b/isis/src/base/apps/cnetstats/tsts/imagestats/Makefile
@@ -5,9 +5,10 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(LS) -1 $(INPUT)/*.cub > $(OUTPUT)/cube.lis;
 	$(APPNAME) fromlist=$(OUTPUT)/cube.lis \
-	  cnet=$(INPUT)/cnet.net \
-	  filter=no \
-	  create_image_stats=yes \
-	  image_stats_file=$(OUTPUT)/imagestats.txt \
-	  create_point_stats=no > /dev/null;
-	  $(RM) $(OUTPUT)/cube.lis;
+	cnet=$(INPUT)/cnet.net \
+	filter=no \
+	create_image_stats=yes \
+	image_stats_file=$(OUTPUT)/out.txt \
+	create_point_stats=no > /dev/null;
+	$(SED) 's/.*\/input\///' $(OUTPUT)/out.txt > $(OUTPUT)/truth.txt;
+	$(RM) $(OUTPUT)/cube.lis $(OUTPUT)/out.txt;
