Rename output file to truth.txt for consistency in Makefile
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@701 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/cnetstats/tsts/pointstats/Makefile
+++ b/isis/src/base/apps/cnetstats/tsts/pointstats/Makefile
@@ -9,5 +9,5 @@ commands:
 	  filter=no \
 	  create_image_stats=no \
 	  create_point_stats=yes \
-	  point_stats_file=$(OUTPUT)/pointstats.txt > /dev/null;
+	  point_stats_file=$(OUTPUT)/truth.txt > /dev/null;
 	  $(RM) $(OUTPUT)/cube.lis;
