Updated echo to not be system dependant
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@710 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/cassini/tsts/vims/Makefile
+++ b/isis/src/cassini/tsts/vims/Makefile
@@ -33,7 +33,7 @@ commands:
 	  to= $(OUTPUT)/CM_1477461989_1.cub--finalOutput.pvl SAMPLE=32 LINE=33 ALLOWOUTSIDE=no \
 	  > /dev/null
 
-	$(ECHO) -e "\nOutput of getsn..." >> $(OUTPUT)/CM_1477461989_1.cub--getsnOutput.txt
+	$(ECHO) "Output of getsn..." >> $(OUTPUT)/CM_1477461989_1.cub--getsnOutput.txt
 
 	$(GETSN) from=$(OUTPUT)/CM_1477461989_1.cub--vims2isis-spiceinit-vis.cub \
 	  >> $(OUTPUT)/CM_1477461989_1.cub--getsnOutput.txt
