--- a/isis/src/base/apps/campt/tsts/default/Makefile
+++ b/isis/src/base/apps/campt/tsts/default/Makefile
@@ -3,8 +3,8 @@ APPNAME = campt
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	cp $(INPUT)/output.txt $(OUTPUT)/camptTruth1.pvl
+	cp $(INPUT)/output.txt $(OUTPUT)/camptTruth1.pvl;
 	$(APPNAME) \
 	from=$(INPUT)/ab102401.cub \
 	to=$(OUTPUT)/camptTruth1.pvl \
-	> /dev/null 
+	> /dev/null;
