Update app test
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@960 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/apollo/apps/apollo2isis/tsts/default/Makefile
+++ b/isis/src/apollo/apps/apollo2isis/tsts/default/Makefile
@@ -1,10 +1,6 @@
 APPNAME = apollo2isis
 
-isisTruth.txt.IGNORELINES = ByteOrder StartByte Bytes
-
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(APPNAME) from=$(INPUT)/AS15-M-1450.lbl \
-	to=$(OUTPUT)/AS15-M-1450.cub > /dev/null;
-	catlab from=$(OUTPUT)/AS15-M-1450.cub >& $(OUTPUT)/isisTruth.txt;
+	cp $(INPUT)/deferred.txt $(OUTPUT)/deferred.txt > /dev/null;
