Update app test
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@961 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/apollo/apps/apollofindrx/tsts/default/Makefile
+++ b/isis/src/apollo/apps/apollofindrx/tsts/default/Makefile
@@ -1,12 +1,6 @@
 APPNAME = apollofindrx
 
-findrxTruth.pvl.IGNORELINES = ByteOrder StartByte Bytes
-
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	cp $(INPUT)/AS15-M-1450.cub $(OUTPUT)/AS15-M-1450.findrx.cub;
-	$(APPNAME) from=$(OUTPUT)/AS15-M-1450.findrx.cub \
-	tolerance=.2 patternsize=101 deltax=50 deltay=50 > /dev/null;
-	catlab from=$(OUTPUT)/AS15-M-1450.findrx.cub > $(OUTPUT)/findrxTruth.pvl 2>&1;
-	rm $(OUTPUT)/AS15-M-1450.findrx.cub;
+	cp $(INPUT)/deferred.txt $(OUTPUT)/deferred.txt > /dev/null;
