Update app test
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@962 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/apollo/apps/apollocal/tsts/default/Makefile
+++ b/isis/src/apollo/apps/apollocal/tsts/default/Makefile
@@ -1,10 +1,6 @@
 APPNAME = apollocal
 
-calTruth.txt.IGNORELINES = ByteOrder StartByte Bytes
-
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(APPNAME) from=$(INPUT)/AS15-M-1450.remrx.cub \
-	to=$(OUTPUT)/AS15-M-1450.cal.cub > /dev/null;
-	catlab from=$(OUTPUT)/AS15-M-1450.cal.cub >& $(OUTPUT)/calTruth.txt;
+	cp $(INPUT)/deferred.txt $(OUTPUT)/deferred.txt > /dev/null;
