Added options SUBSPACECRAFTGROUNDAZIMUTH and SUBSOLARGROUNDAZIMUTH
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@1000 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/phocube/tsts/default/Makefile
+++ b/isis/src/base/apps/phocube/tsts/default/Makefile
@@ -20,4 +20,6 @@ commands:
 	  northazimuth=true \
 	  sunazimuth=true \
 	  spacecraftazimuth=true \
-	  offnadirangle=true > /dev/null;
+	  offnadirangle=true \
+	  subspacecraftgroundazimuth=true \
+	  subsolargroundazimuth=true > /dev/null;  
