standardized parameter names
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@1063 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/cnetref/tsts/interestOverlaps/Makefile
+++ b/isis/src/base/apps/cnetref/tsts/interestOverlaps/Makefile
@@ -7,12 +7,12 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(LS) -1 $(INPUT)/*.cub > $(OUTPUT)/cube.lis;
 	$(APPNAME) fromlist=$(OUTPUT)/cube.lis \
-	  network=$(INPUT)/autoseed.net \
+	  cnet=$(INPUT)/autoseed.net \
 	  deffile=$(INPUT)/deffile.def \
 	  criteria=interest \
 	  limit=true \
 	  overlaplist=$(INPUT)/overlaps.lis \
-	  to=$(OUTPUT)/truth.pvl \
+	  onet=$(OUTPUT)/truth.pvl \
 	  networkid=DefaultTruth \
 	  Description=Testing > /dev/null;
 	  $(RM) $(OUTPUT)/cube.lis;
