--- a/isis/src/base/apps/cnetref/tsts/resolutionRange/Makefile
+++ b/isis/src/base/apps/cnetref/tsts/resolutionRange/Makefile
@@ -7,13 +7,13 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(LS) -1 $(INPUT)/*.cub > $(OUTPUT)/cube.lis;
 	$(APPNAME) fromlist=$(OUTPUT)/cube.lis \
-	  network=$(INPUT)/autoseed.net \
+	  cnet=$(INPUT)/autoseed.net \
 	  deffile=$(INPUT)/deffile.def \
 	  criteria=resolution \
 	  type=range \
 	  minres=200 \
 	  maxres=300 \
-	  to=$(OUTPUT)/truth.pvl \
+	  onet=$(OUTPUT)/truth.pvl \
 	  networkid=DefaultTruth \
 	  Description=RefByIncidence > /dev/null;
 	  $(RM) $(OUTPUT)/cube.lis;
