--- a/isis/src/base/apps/mosrange/tsts/default/Makefile
+++ b/isis/src/base/apps/mosrange/tsts/default/Makefile
@@ -9,7 +9,9 @@ mosrange_equi.txt.IGNORELINES = MinPixelResolution MaxPixelResolution \
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(APPNAME) FROMLIST=$(INPUT)/files.lis \
+	$(LS) $(INPUT)/*.cub > $(OUTPUT)/files.lis;
+	$(APPNAME) FROMLIST=$(OUTPUT)/files.lis \
 	MAP=$(ISIS3DATA)/base/templates/maps/equirectangular.map \
 	TO=$(OUTPUT)/mosrange_equi.map PRECISION=4 > /dev/null;
 	/bin/mv $(OUTPUT)/mosrange_equi.map $(OUTPUT)/mosrange_equi.txt
+	$(RM) $(OUTPUT)/files.lis;
