Updated test to be more robust
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@1122 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/messenger/apps/mdisedrinfo/tsts/multi/Makefile
+++ b/isis/src/messenger/apps/mdisedrinfo/tsts/multi/Makefile
@@ -3,16 +3,19 @@ APPNAME = mdisedrinfo
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(APPNAME) from='$$messenger/testData/EN0089576657M.cub' \
+	$(APPNAME) from=$(INPUT)/EN0089576657M.cub \
 	  keylist=$(INPUT)/mdispdskeys.lis \
 	  to=$(OUTPUT)/mdisedrinfo.txt \
 	  pvl=$(OUTPUT)/EN0089576657M.pvl > /dev/null;
-	$(APPNAME) from='$$messenger/testData/EW0031592574E.cub' \
+	$(APPNAME) from=$(INPUT)/EW0031592574E.cub \
 	  to=$(OUTPUT)/mdisedrinfo.txt \
 	  pvl=$(OUTPUT)/EW0031592574E.pvl  > /dev/null;
-	$(APPNAME) from='$$messenger/testData/EW0061073619F.IMG' \
+	$(APPNAME) from=$(INPUT)/EW0061073619F.IMG \
 	  to=$(OUTPUT)/mdisedrinfo.txt \
 	  pvl=$(OUTPUT)/EW0061073619F.pvl > /dev/null;
-	$(APPNAME) from='$$messenger/testData/EW0089570936I.cub' \
+	$(APPNAME) from='$(INPUT)/EW0089570936I.cub' \
 	  to=$(OUTPUT)/mdisedrinfo.txt \
 	  pvl=$(OUTPUT)/EW0089570936I.pvl > /dev/null;
+	$(CAT) $(OUTPUT)/mdisedrinfo.txt | \
+	  sed 's#^.*input/##' > $(OUTPUT)/tmp.txt;
+	$(MV) $(OUTPUT)/tmp.txt $(OUTPUT)/mdisedrinfo.txt;
