Made more tolerant of differences... not sure what to do about correction value
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@1211 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/mro/apps/hical/tsts/dns/Makefile
+++ b/isis/src/mro/apps/hical/tsts/dns/Makefile
@@ -5,8 +5,11 @@ output.txt.IGNORELINES = CONF
 
 include $(ISISROOT)/make/isismake.tsts
 
+# The sed command cuts off the last 2 numbers from the stddev
 commands:
 	$(APPNAME) FROM=$(INPUT)/PSP_001446_1790_RED2_0.cub \
 	TO=$(OUTPUT)/output.cub OPATH=. UNITS=DN > /dev/null;
-	$(MV) PSP_001446_1790_RED2_0.hical.log \
-	$(OUTPUT)/output.txt;
+	$(CAT) PSP_001446_1790_RED2_0.hical.log | \
+	  sed 's/\(.*StdDev\[[0-9][0-9]*\.[0-9]*\)\([0-9][0-9]\)/\1/' \
+	  > $(OUTPUT)/output.txt;
+	$(RM) PSP_001446_1790_RED2_0.hical.log
