Tests now use the output folder for their list files
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@1304 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/cnetedit/tsts/ignore/Makefile
+++ b/isis/src/base/apps/cnetedit/tsts/ignore/Makefile
@@ -3,8 +3,8 @@ APPNAME = cnetedit
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(LS) $(INPUT)/*.cub > $(INPUT)/list.lis;
+	$(LS) $(INPUT)/*.cub > $(OUTPUT)/list.lis;
 	$(APPNAME) CNET=$(INPUT)/cnet.net \
-	CUBELIST=$(INPUT)/list.lis \
+	CUBELIST=$(OUTPUT)/list.lis \
 	ONET=$(OUTPUT)/cnet.pvl > /dev/null;
-	$(RM) $(INPUT)/list.lis;
+	$(RM) $(OUTPUT)/list.lis;
