--- a/isis/src/base/apps/cnetedit/tsts/ignoreMeasuresPoints/Makefile
+++ b/isis/src/base/apps/cnetedit/tsts/ignoreMeasuresPoints/Makefile
@@ -3,9 +3,9 @@ APPNAME = cnetedit
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(LS) $(INPUT)/*.cub > $(INPUT)/list.lis;
+	$(LS) $(INPUT)/*.cub > $(OUTPUT)/list.lis;
 	$(APPNAME) CNET=$(INPUT)/cnet.net \
-	CUBELIST=$(INPUT)/list.lis \
+	CUBELIST=$(OUTPUT)/list.lis \
 	POINTLIST=$(INPUT)/points.lis \
 	ONET=$(OUTPUT)/cnet.pvl > /dev/null;
-	$(RM) $(INPUT)/list.lis;
+	$(RM) $(OUTPUT)/list.lis;
