Test now uses the output folder for the list file
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@1305 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/cnetedit/tsts/checkValid/Makefile
+++ b/isis/src/base/apps/cnetedit/tsts/checkValid/Makefile
@@ -3,11 +3,11 @@ APPNAME = cnetedit
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(LS) $(INPUT)/*.cub > $(INPUT)/list.lis;
+	$(LS) $(INPUT)/*.cub > $(OUTPUT)/list.lis;
 	$(APPNAME) CNET=$(INPUT)/cnet.net \
 	ONET=$(OUTPUT)/cnet.pvl \
 	LOG=$(OUTPUT)/log.txt \
 	CHECKVALID=yes \
-       	FROMLIST=$(INPUT)/list.lis \
+       	FROMLIST=$(OUTPUT)/list.lis \
 	DEFFILE=$(INPUT)/deffile.def > /dev/null;
-	$(RM) $(INPUT)/list.lis;
+	$(RM) $(OUTPUT)/list.lis;
