Tests now test that the correct values are printed out, not that the values are correct. Example: prints out sample, but sample may be wrong - it is not this program's to test if sample is right
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@1306 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/cnettable/tsts/append/Makefile
+++ b/isis/src/base/apps/cnettable/tsts/append/Makefile
@@ -8,8 +8,9 @@ commands:
 	$(APPNAME) fromlist=$(OUTPUT)/cubeList.lst \
 	cnet=$(INPUT)/testNet.net \
 	to=$(OUTPUT)/appendTo.txt \
-        append=true > /dev/null; 
+	  append=true > /dev/null; 
 	rm -f $(OUTPUT)/cubeList.lst > /dev/null;
-	cat $(OUTPUT)/appendTo.txt | sed s/,\[^,]\*\.cub,/,.cub,/ \
-	> $(OUTPUT)/output.txt
+	cat $(OUTPUT)/appendTo.txt | sed s/,\[^,]\*\.cub,/,file.cub,/ \
+	  | sed 's/\([0-9][0-9]*\.[0-9]\)\([0-9][0-9]*\)/\1/g' \
+	  > $(OUTPUT)/output.txt
 	rm -f $(OUTPUT)/appendTo.txt
