Modified to work in different testData area
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@1380 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/cnetnewradii/tsts/errors/Makefile
+++ b/isis/src/control/apps/cnetnewradii/tsts/errors/Makefile
@@ -12,6 +12,6 @@ commands:
 	  errors=errors.pvl \
 	  -preference=$$ISISROOT/src/base/objs/Preference/TestPreferences \
 	  2>> $(OUTPUT)/error1.txt > /dev/null;
-	cat $(OUTPUT)/error1.txt | sed s+/usgs/cpkgs/isis3/testData/isis/src/base/apps/cnetnewradii/tsts/errors/++g > $(OUTPUT)/error.txt;
+	cat $(OUTPUT)/error1.txt | sed s+/usgs.*errors/++g > $(OUTPUT)/error.txt;
 	rm -f $(OUTPUT)/error1.txt;
 	rm -f $(OUTPUT)/outputcnet.pvl;
