Improved regular expressions
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@1382 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/overlapstats/tsts/full/Makefile
+++ b/isis/src/base/apps/overlapstats/tsts/full/Makefile
@@ -7,19 +7,19 @@ commands:
 	$(APPNAME) from=$(OUTPUT)/list.lis \
 	to=$(OUTPUT)/csv.txt OVERLAPLIST=$(INPUT)/overlaps.lis \
 	DETAIL=full SINGLELINE=false > /dev/null;
-	sed -e 's:/[a-zA-Z/0-9]*.lev1.cub:PATH:g' $(OUTPUT)/csv.txt \
+	sed -e 's:/[^,]*.lev1.cub:PATH:g' $(OUTPUT)/csv.txt \
 	> $(OUTPUT)/csvNoPaths.txt;
 	$(RM) $(OUTPUT)/csv.txt;
 	$(APPNAME) from=$(OUTPUT)/list.lis \
 	to=$(OUTPUT)/tab.txt OVERLAPLIST=$(INPUT)/overlaps.lis \
 	DETAIL=full TABLETYPE=tab > /dev/null;
-	sed -e 's:/[a-zA-Z/0-9]*.lev1.cub:PATH:g' $(OUTPUT)/tab.txt \
+	sed -e 's:/[^\t]*.lev1.cub:PATH:g' $(OUTPUT)/tab.txt \
 	> $(OUTPUT)/tabNoPaths.txt;
 	$(RM) $(OUTPUT)/tab.txt;
 	$(APPNAME) from=$(OUTPUT)/list.lis \
 	to=$(OUTPUT)/csvDefault.txt OVERLAPLIST=$(INPUT)/overlaps.lis \
 	DETAIL=full > /dev/null;
-	sed -e 's:/[a-zA-Z/0-9]*.lev1.cub:PATH:g' $(OUTPUT)/csvDefault.txt \
+	sed -e 's:/[^,]*.lev1.cub:PATH:g' $(OUTPUT)/csvDefault.txt \
 	> $(OUTPUT)/csvDefaultNoPaths.txt;
 	$(RM) $(OUTPUT)/csvDefault.txt;
 	$(RM) $(OUTPUT)/list.lis;
