--- a/isis/src/base/apps/stats/tsts/format/Makefile
+++ b/isis/src/base/apps/stats/tsts/format/Makefile
@@ -5,5 +5,5 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) from=$(INPUT)/isisTruth.cub \
 	to=$(OUTPUT)/tmp.txt format=flat > /dev/null;
-	sed -e 's:/[a-zA-Z/0-9]*isisTruth.cub:PATH:g' $(OUTPUT)/tmp.txt > $(OUTPUT)/stats.txt;
+	sed -e 's:/[^,]*isisTruth.cub:PATH:g' $(OUTPUT)/tmp.txt > $(OUTPUT)/stats.txt;
 	$(RM) $(OUTPUT)/tmp.txt;
