Corrected regular expression
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@1386 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/mat2cnet/tsts/errors/Makefile
+++ b/isis/src/control/apps/mat2cnet/tsts/errors/Makefile
@@ -74,7 +74,7 @@ commands:
 	description="Invalid RAND file - lat/lon/rad not a double" \
 	networkid=TestNet10 \
 	target=Titan 2>> $(OUTPUT)/error1.txt > /dev/null;
-	$(SED) 's+.*/input/++' $(OUTPUT)/error1.txt > $(OUTPUT)/error.txt;
+	$(SED) 's+/usgs.*/input/++' $(OUTPUT)/error1.txt > $(OUTPUT)/error.txt;
 	rm -f $(OUTPUT)/error1.txt;
 	rm -f $(OUTPUT)/out.net;
 	rm -f $(OUTPUT)/cub2.lis;
