Updated to work with binary cnets
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@1393 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/autoseed/tsts/overlap/Makefile
+++ b/isis/src/control/apps/autoseed/tsts/overlap/Makefile
@@ -8,7 +8,7 @@ commands:
 	$(APPNAME) fromlist=$(OUTPUT)/sub.lis \
 	seeddef=$(INPUT)/grid.pvl \
 	overlaplist=$(INPUT)/suboverlaps.def \
-	to=$(OUTPUT)/sub.net.pvl \
+	to=$(OUTPUT)/sub.net \
 	networkid=SubNetwork \
 	pointid="sub????" \
 	description=SubNetwork \
@@ -16,8 +16,8 @@ commands:
 	$(APPNAME) fromlist=$(OUTPUT)/list.lis \
 	seeddef=$(INPUT)/smallgrid.pvl \
 	overlaplist=$(INPUT)/listoverlaps.def \
-	cnet=$(OUTPUT)/sub.net.pvl \
-	to=$(OUTPUT)/new.net.pvl \
+	cnet=$(OUTPUT)/sub.net \
+	to=$(OUTPUT)/new.net \
 	networkid=NewNetwork \
 	pointid="new????" \
 	description=NewNetwork \
