--- a/isis/src/control/apps/cnetedit/tsts/checkValid/Makefile
+++ b/isis/src/control/apps/cnetedit/tsts/checkValid/Makefile
@@ -5,7 +5,7 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(LS) $(INPUT)/*.cub > $(OUTPUT)/list.lis;
 	$(APPNAME) CNET=$(INPUT)/cnet.net \
-	ONET=$(OUTPUT)/cnet.pvl \
+	ONET=$(OUTPUT)/cnet.net \
 	LOG=$(OUTPUT)/log.txt \
 	CHECKVALID=yes \
        	FROMLIST=$(OUTPUT)/list.lis \
