Now uses binary cnet diff
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@1395 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/cnetedit/tsts/ignore/Makefile
+++ b/isis/src/control/apps/cnetedit/tsts/ignore/Makefile
@@ -6,5 +6,5 @@ commands:
 	$(LS) $(INPUT)/*.cub > $(OUTPUT)/list.lis;
 	$(APPNAME) CNET=$(INPUT)/cnet.net \
 	CUBELIST=$(OUTPUT)/list.lis \
-	ONET=$(OUTPUT)/cnet.pvl > /dev/null;
+	ONET=$(OUTPUT)/cnet.net > /dev/null;
 	$(RM) $(OUTPUT)/list.lis;
