Updated to do binary cnet comparisons
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@1396 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/cnetedit/tsts/ignoreMeasuresPoints/Makefile
+++ b/isis/src/control/apps/cnetedit/tsts/ignoreMeasuresPoints/Makefile
@@ -7,5 +7,5 @@ commands:
 	$(APPNAME) CNET=$(INPUT)/cnet.net \
 	CUBELIST=$(OUTPUT)/list.lis \
 	POINTLIST=$(INPUT)/points.lis \
-	ONET=$(OUTPUT)/cnet.pvl > /dev/null;
+	ONET=$(OUTPUT)/cnet.net > /dev/null;
 	$(RM) $(OUTPUT)/list.lis;
