--- a/isis/src/control/apps/cnetedit/tsts/ignorePoints/Makefile
+++ b/isis/src/control/apps/cnetedit/tsts/ignorePoints/Makefile
@@ -5,4 +5,4 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) CNET=$(INPUT)/cnet.net \
 	POINTLIST=$(INPUT)/points.lis \
-	ONET=$(OUTPUT)/cnet.pvl > /dev/null;
+	ONET=$(OUTPUT)/cnet.net > /dev/null;
