--- a/isis/src/control/apps/cnetedit/tsts/default/Makefile
+++ b/isis/src/control/apps/cnetedit/tsts/default/Makefile
@@ -3,4 +3,4 @@ APPNAME = cnetedit
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(APPNAME) CNET=$(INPUT)/cnet.net ONET=$(OUTPUT)/cnet.pvl> /dev/null;
+	$(APPNAME) CNET=$(INPUT)/cnet.net ONET=$(OUTPUT)/cnet.net > /dev/null;
