Updated to use binary cnet comparison
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@1398 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/cnetmerge/tsts/list/Makefile
+++ b/isis/src/control/apps/cnetmerge/tsts/list/Makefile
@@ -6,7 +6,7 @@ commands:
 	$(LS) $(INPUT)/*.ctl > $(OUTPUT)/list.lis;
 	$(APPNAME) INPUTTYPE=list \
 	FROMLIST=$(OUTPUT)/list.lis \
-	TO=$(OUTPUT)/testReplace.pvl \
+	TO=$(OUTPUT)/testReplace.net \
 	DUPLICATEPOINTS=merge \
 	REPORT=$(OUTPUT)/report.txt \
 	ID=testReplaceMerge DESCRIPTION=NewTextCtl \
